# models.py
@@ -10,20 +10,22 @@ class User(db.Model):
     name: Mapped[str] = mapped_column(db.String(255), nullable=False)
     username: Mapped[str] = mapped_column(db.String(255), unique=True, nullable=False)
     email: Mapped[str] = mapped_column(db.String(255), unique=True, nullable=False)
-    password_hash: Mapped[str] = mapped_column(db.String(255), nullable=False)
+    password: Mapped[str] = mapped_column(db.String(255), nullable=False)
 
+    # Set the hashed password
     def set_password(self, password):
-        self.password_hash = generate_password_hash(password)
+        self.password = generate_password_hash(password)
 
+    # Check if the provided password matches the hashed password
     def check_password(self, password):
-        return check_password_hash(self.password_hash, password)
+        return check_password_hash(self.password, password)
 
 class Post(db.Model):
     __tablename__ = 'posts'  # Table name in the database
 
     id: Mapped[int] = mapped_column(primary_key=True)
     title: Mapped[str] = mapped_column(db.String(255), nullable=False)
-    body: Mapped[str] = mapped_column(db.String, nullable=True)
+    content: Mapped[str] = mapped_column(db.String, nullable=True)
     user_id: Mapped[int] = mapped_column(db.Integer, db.ForeignKey('users.id'), nullable=False)
     comments: Mapped[list['Comment']] = relationship('Comment', backref='post', lazy=True)
 
@@ -32,6 +34,6 @@ class Comment(db.Model):
 
     id: Mapped[int] = mapped_column(primary_key=True)
     content: Mapped[str] = mapped_column(db.Text, nullable=False)
-    date_posted: Mapped[datetime] = mapped_column(db.DateTime, default=datetime.utcnow)
+    date_posted: Mapped[datetime] = mapped_column(db.DateTime, default=datetime.now(timezone.utc))
     user_id: Mapped[int] = mapped_column(db.Integer, db.ForeignKey('users.id'), nullable=False)
     post_id: Mapped[int] = mapped_column(db.Integer, db.ForeignKey('posts.id'), nullable=False)
